2007-04-20  Darin Adler  <darin@apple.com>

        Reviewed by Geoff Garen and John Sullivan.

        - test changes for <rdar://problem/4671964> document property on <iframe> elements causes problems for SAP application

        * fast/dom/iframe-document-expected.txt: Added.
        * fast/dom/iframe-document.html: Added.

        * fast/dom/attr_dead_doc.html: Changed to use contentDocument instead of relying on the document property
        on HTMLIFrameElement.
        * fast/events/mouseover-mouseout.html: Ditto.
        * fast/frames/repaint-display-none-crash.html: Ditto.

2007-04-19  Mitz Pettel  <mitz@webkit.org>

        Rubber-stamped by Adam.

        - http://bugs.webkit.org/show_bug.cgi?id=13412
          Replace abe.jpg with a PNG file

        * editing/abe.jpg: Removed.
        * editing/deleting/4866671.html:
        * editing/deleting/delete-3608462-fix.html:
        * editing/deleting/delete-image-001.html:
        * editing/deleting/delete-image-002.html:
        * editing/deleting/delete-image-003.html:
        * editing/deleting/delete-image-004.html:
        * editing/execCommand/5080333-1-expected.checksum:
        * editing/execCommand/5080333-1-expected.png:
        * editing/execCommand/5080333-1.html:
        * editing/execCommand/5080333-2-expected.checksum:
        * editing/execCommand/5080333-2-expected.png:
        * editing/execCommand/5080333-2.html:
        * editing/execCommand/createLink-expected.txt:
        * editing/execCommand/createLink.html:
        * editing/execCommand/insertImage-expected.checksum:
        * editing/execCommand/insertImage-expected.png:
        * editing/execCommand/insertImage.html:
        * editing/execCommand/unlink-expected.txt:
        * editing/execCommand/unlink.html:
        * editing/inserting/12882.html:
        * editing/inserting/typing-around-image-001.html:
        * editing/pasteboard/4641033-expected.checksum:
        * editing/pasteboard/4641033-expected.png: